@@ -3,7 +3,7 @@
 
 int keep_alive_expired();
 void update_keep_alive();
-int keep_alive_trylock();
+int keep_alive_locked();
 int keep_alive_lock();
 int keep_alive_unlock();
 unsigned keep_alive_period();
